experiments/03-network-policies-realistic/strict/03-services-strict.yaml
apiVersion: v1
kind: Service
metadata:
  name: netpol-strict
  namespace: default
spec:
  selector:
    app: netpol-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
